--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -25,10 +25,26 @@ builds:
     - '386'
     - arm
     - arm64
+  goarm:
+    - "7"
+  gomips:
+    - hardfloat
   ignore:
     - goos: darwin
       goarch: '386'
   binary: '{{ .ProjectName }}_v{{ .Version }}'
+  targets:
+    - darwin_amd64
+    - darwin_arm64
+    - linux_386
+    - linux_amd64
+    - linux_arm
+    - linux_arm64
+    - windows_386
+    - windows_amd64
+    - freebsd_386
+    - freebsd_amd64
+    - freebsd_arm
 archives:
 - format: zip
   name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
